bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:3: error: not found: value aSimle
    if ((aSimle && bSmile) || (!aSmile && !bSmile))
         ^