bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
		if ((aSimle && bSmile) || (!aSmile && !bSmile))
  			return true
		else
  			return false
}